# secure-file-sharing-rust

./: .gitignore  Cargo.toml  README.md
client/: Cargo.toml
client/src/: cli.rs  main.rs  token_store.rs  types.rs
src/: db.rs  main.rs  traits.rs
src/api/: auth.rs  auth_middleware.rs  file.rs  health.rs  me.rs  mod.rs
src/auth/: mod.rs  passwords.rs  repository.rs  service.rs  token.rs  types.rs
src/file/: mod.rs  service.rs
src/models/: file.rs  mod.rs  permission.rs  permissions.rs  user.rs
src/repository/: file_repository.rs  mod.rs  permission_repository.rs  user_repository.rs
src/storage/: disk.rs
