[package]
name = "secure_file_server"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = { version = "0.7", features = ["multipart", "macros"] }
tower = "0.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
argon2 = "0.5"
rand = "0.8"
rand_core = "0.6"
parking_lot = "0.12"
uuid = { version = "1", features = ["v4"]}
jsonwebtoken = "9"
bytes = "1"
tokio-util = { version = "0.7", features = ["io"] }
